# ComfyUI-AstroCorp-Nodes

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
nodes/: InstructNode.py  LlamaNode.py  MergeTextsNode.py  TextareaNode.py
web/: InstructWidget.js  MergeTextsWidget.js  TextareaWidget.js  textareaWidget.js
