[project]
name = "comfyui-astrocorp-nodes"
description = "A collection of personal ComfyUI nodes designed to enhance and automate workflows."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["huggingface-hub", "transformers"]

[project.urls]
Repository = "https://github.com/AstroCorp/ComfyUI-AstroCorp-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "astrocorp"
DisplayName = "ComfyUI-AstroCorp-Nodes"
Icon = ""
