[project]
name = "comfyui-astrocorp-nodes"
description = "A collection of personal ComfyUI nodes designed to enhance and automate workflows."
version = "1.2.0"
license = {file = "LICENSE"}
dependencies = ["deepl-cli", "huggingface-hub", "transformers"]

[project.urls]
Repository = "https://github.com/AstroCorp/ComfyUI-AstroCorp-Nodes"

[tool.comfy]
PublisherId = "astrocorp"
DisplayName = "ComfyUI-AstroCorp-Nodes"
Icon = "https://raw.githubusercontent.com/AstroCorp/ComfyUI-AstroCorp-Nodes/refs/heads/master/icon.png"
